[build-system]
requires = ["setuptools", "ChimeraX-BundleBuilder"]
build-backend = "chimerax.bundle_builder.cx_pep517"

[project]
name = "ChimeraX-Segmentations"
license = { text = "Free for non-commercial use" }
authors= [{name = "UCSF RBVI", email="chimerax@cgl.ucsf.edu"}]
description = "Segment any volume data"
dependencies = [
	"ChimeraX-Core ~=1.0"
	, "ChimeraX-DataFormats ~=1.0"
	, "ChimeraX-Geometry ~= 1.0"
	, "ChimeraX-MapData ~= 2.0"
	, "ChimeraX-OpenCommand ~= 1.0"
  , "ChimeraX-UI >= 1.33"
]
dynamic = ["classifiers", "requires-python", "version"]

[project.readme]
content-type = "text"
text = "Segment any volume data"

[project.urls]
Home = "https://www.rbvi.ucsf.edu/chimerax/"

[tool.setuptools.dynamic]
version = { attr = "src.__version__" }

[tool.chimerax]
custom-init = true
min-session-version = 1
max-session-version = 1
categories = ["Volume Data"]
classifiers = ["Development Status :: 2 - Pre-Alpha"]

[tool.chimerax.extra-files]
"src/icons" = ["*.png", "*.svg"]

[tool.chimerax.initializations.manager]
bundles = ["ChimeraX-MouseModes", "ChimeraX-UI"]

[tool.chimerax.tool."Segmentations"]
category = "Volume Data"
description = "Interactively segment volumes"

[tool.chimerax.tool."Orthoplanes"]
category = "Volume Data"
description = "View planes of volumes in a dedicated tool"

[tool.chimerax.command."ui view"]
category = "General"
description = "See medical images in a 4-panel viewer"

[tool.chimerax.command.segmentations]
category = "Volume Data"
description = "Create, edit, or destory segmentations"

[tool.chimerax.provider."Segmentation Controls"]
manager = "toolbar"
tab = "Medical Image"
section = "Segmentation Controls"
after = "Mouse Mode"

[tool.chimerax.provider."toggle mouse modes"]
manager = "toolbar"
tab = "Medical Image"
section = "Segmentation Controls"
display-name = "Toggle Mouse Modes"
icon = "mouse_small.svg"
description = "Toggle mouse modes"

[tool.chimerax.provider."toggle hand modes"]
manager = "toolbar"
tab = "Medical Image"
section = "Segmentation Controls"
icon = "right_controller_small.svg"
display-name = "Toggle Hand Modes"
description = "toggle hand modes"
